manifest/app/chat.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: chat
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
spec: {}

---
