manifest/app/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: chat-service
  namespace: chat
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  type: ClusterIP
  selector:
    app: chat-app
